src/app/components/button/button.component.scss
.btn {
  @apply block transition-all duration-300 hover:shadow-app cursor-pointer text-center;

  span {
    @apply flex items-center justify-center;
  }

  &.btn-size-md {
    @apply px-4 py-3 border-[3px];
  }

  &.btn-size-square-sm {
    @apply w-9 h-9 flex items-center justify-center border-[3px];
  }

  &.btn-primary {
    @apply font-bold rounded-full bg-primary border-primary text-white;

    &:hover,
    &:focus-within {
      @apply bg-white border-white text-main-dark;
    }
  }

  &.loading {
    @apply relative flex items-center justify-center;
    &::after {
      @apply animate-spin border-4 dark:border-white border-main-dark;
      content: "";
      position: absolute;
      width: 20px;
      height: 20px;
      border-radius: 50%;
      border-top-color: rgba(34, 34, 34, 0.2);
      @media (prefers-color-scheme: dark) {
        border-top-color: rgba(255, 255, 255, 0.2);
      }
    }
    & > * {
      @apply opacity-0;
    }
  }

  &.btn-secondary {
    @apply font-bold rounded-full bg-secondary-gray dark:bg-gray-700 dark:border-gray-700 border-secondary-gray;
    &:hover,
    &:focus-within {
      @apply bg-white border-white dark:border-gray-800 dark:bg-gray-800 dark:text-white text-main-dark;
    }
  }

  &.btn-light {
    @apply font-bold  border-secondary-gray dark:border-gray-800 bg-transparent rounded-full;
    &:hover,
    &:focus {
      @apply dark:bg-gray-800 dark:border-gray-800 border-white;
    }
  }

  &.btn-none {
    @apply font-bold  border-transparent bg-transparent hover:shadow-none text-main-dark;
  }
}

